--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 </head>
 
 <body>
+
     <header class="header">
-        <div class="video-bg">
+        <div class="header__video-bg">
 
             <video src="/videoback.mp4" type="video/mp4" autoplay muted loop></video>
             <div class="effects"></div>
@@ -31,6 +32,16 @@
                 <a href="#" class="btn btn-white btn-animated ">Go to my works</a>
             </div>
         </div>
+
+
+        <!-- <div class="header__messege">
+            <div class="messege">
+                <div class="box">
+                    <div class="block">
+                    </div>
+                </div>
+            </div>
+        </div> -->
     </header>
 </body>
 
