new changes for site

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
     <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
@@ -20,28 +18,20 @@
     <header class="header">
         <div class="header__video-bg">
 
-            <video src="/videoback.mp4" type="video/mp4" autoplay muted loop></video>
+            <video src="/videoback.webm" type="video/mp4" autoplay muted loop></video>
             <div class="effects"></div>
-            <div class="text-box">
+
+            <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary-main">Nasekin</span>
-                    <span class="heading-primary-sub">programmer's portfolio</span>
+                    <span class="heading--primary-main">Nasekin</span>
+                    <span class="heading--primary-sub">programmer's portfolio</span>
                 </h1>
             </div>
-            <div class="button-box">
-                <a href="#" class="btn btn-white btn-animated ">Go to my works</a>
+
+            <div class="header__button-box">
+                <a href="#" class="btn btn--white btn--animated ">Go to my works</a>
             </div>
         </div>
-
-
-        <!-- <div class="header__messege">
-            <div class="messege">
-                <div class="box">
-                    <div class="block">
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </header>
 </body>
 
